# Sales-invoice-app

./: README.md  pyproject.toml
.github/workflows/: ci.yml
sales_invoice/: hooks.py  modules.txt
sales_invoice/sales_invoice/doctype/customer_detail/: customer_detail.json  customer_detail.py
sales_invoice/sales_invoice/doctype/invoice/: invoice.json  invoice.py
sales_invoice/sales_invoice/report/new_report/: new_report.json
sales_invoice/www/: hello.html
